hyperstack-macros/tests/ui/resolve_errors/malformed_resolve_attribute.rs
use hyperstack_macros::hyperstack;

#[hyperstack]
struct Broken {
    #[resolve()]
    value: u64,
}

fn main() {}
